--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "react-transition-group": "^4.4.1",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.0"
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
