--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "0.1.0",
   "main": "dist/index.js",
   "private": true,
+  "peerDependencies": {
+    "react": ">=16"
+  },
   "dependencies": {
-    "classnames": "^2.2.6",
     "cra-template": "1.0.3",
-    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
     "react-transition-group": "^4.4.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.0"
@@ -40,6 +38,9 @@
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4"
+    "@babel/preset-react": "^7.10.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.3"
   }
 }
