--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "dependencies": {
     "cra-template": "1.0.3",
     "prop-types": "^15.7.2",
-    "react-transition-group": "^4.4.1",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.0"
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
